finish create question
