# api/controllers/questionController.go
@@ -1,0 +1,54 @@
+package controllers
+
+import (
+	"ajher-server/internal/question"
+	"ajher-server/utils"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+type questionHandler struct {
+	questionService question.Service
+}
+
+func NewQuestionHandler(questionService question.Service) *questionHandler {
+	return &questionHandler{questionService}
+}
+
+// Save Questions  godoc
+//
+// @Summary  save questions
+// @Description Adding new questions to the database. Add field duration input as string for example "50 sec" or "1 min", it will converted into second in server and return to client as second also. The client should format it.
+// @Tags   Question
+// @Accept   json
+// @Produce  json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add refresh token here>)
+// @Param   addQuestionInputs body  question.AddQuestionInputs true "User Data"
+// @Success  200   {object} question.Question
+// @Router   /question/save [post]
+func (h *questionHandler) Save(ctx *gin.Context) {
+	var input question.AddQuestionInputs
+
+	err := ctx.ShouldBindJSON(&input)
+
+	if err != nil {
+		errors := utils.FormatValidationError(err)
+		errorMessage := gin.H{"errors": errors}
+		response := utils.APIResponse("Save Questions Failed", http.StatusUnprocessableEntity, "error", errorMessage)
+		ctx.JSON(http.StatusUnprocessableEntity, response)
+		return
+	}
+
+	newQuestions, err := h.questionService.Save(input)
+
+	if err != nil {
+		response := utils.APIResponse("Save Questions Failed", http.StatusBadRequest, "error", err.Error())
+		ctx.JSON(http.StatusBadRequest, response)
+		return
+	}
+
+	response := utils.APIResponse("Save Questions Success", http.StatusOK, "success", newQuestions)
+
+	ctx.JSON(http.StatusOK, response)
+}
