# docs/swagger.json
@@ -4,6 +4,48 @@
         "contact": {}
     },
     "paths": {
+        "/question/save": {
+            "post": {
+                "description": "Adding new questions to the database. Add field duration input as string for example \"50 sec\" or \"1 min\", it will converted into second in server and return to client as second also. The client should format it.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Question"
+                ],
+                "summary": "save questions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "Bearer \u003cAdd refresh token here\u003e",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "User Data",
+                        "name": "addQuestionInputs",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/question.AddQuestionInputs"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/question.Question"
+                        }
+                    }
+                }
+            }
+        },
         "/quiz/save": {
             "post": {
                 "description": "Adding new quiz to the database",
@@ -526,8 +568,51 @@
         },
         "otp.VerifyOtpInput": {
             "type": "object",
+            "required": [
+                "otp_code"
+            ],
             "properties": {
                 "otp_code": {
+                    "type": "string"
+                }
+            }
+        },
+        "question.AddQuestionInput": {
+            "type": "object",
+            "required": [
+                "duration",
+                "grade_percentage",
+                "question"
+            ],
+            "properties": {
+                "duration": {
+                    "type": "string"
+                },
+                "grade_percentage": {
+                    "type": "number"
+                },
+                "question": {
+                    "type": "string"
+                },
+                "reference_answer": {
+                    "type": "string"
+                }
+            }
+        },
+        "question.AddQuestionInputs": {
+            "type": "object",
+            "required": [
+                "questions",
+                "quiz_id"
+            ],
+            "properties": {
+                "questions": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/question.AddQuestionInput"
+                    }
+                },
+                "quiz_id": {
                     "type": "string"
                 }
             }
@@ -601,6 +686,11 @@
         },
         "quiz.CreateQuizInput": {
             "type": "object",
+            "required": [
+                "description",
+                "quiz_category_id",
+                "title"
+            ],
             "properties": {
                 "description": {
                     "type": "string"
@@ -635,7 +725,10 @@
                     "type": "string"
                 },
                 "question": {
-                    "$ref": "#/definitions/question.Question"
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/question.Question"
+                    }
                 },
                 "quizCategory": {
                     "$ref": "#/definitions/quizCategory.QuizCategory"
@@ -679,6 +772,10 @@
         },
         "quizCategory.QuizCategoryInput": {
             "type": "object",
+            "required": [
+                "category_name",
+                "description"
+            ],
             "properties": {
                 "category_name": {
                     "type": "string"
@@ -690,6 +787,11 @@
         },
         "user.ChangePasswordUserInput": {
             "type": "object",
+            "required": [
+                "change_password",
+                "otp_code",
+                "password"
+            ],
             "properties": {
                 "change_password": {
                     "type": "string"
@@ -764,6 +866,9 @@
         },
         "user.ResetPasswordInput": {
             "type": "object",
+            "required": [
+                "email"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
